fix margin and gap for grid and grid item

--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -205,7 +205,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin-top: 15px;
+    margin-top: 24px;
     align-items: center;
     @include tablet { 
         flex-direction: inherit;
@@ -213,7 +213,7 @@
         justify-content: center;
     }
     @include desktop { 
-        margin-top: 40px;
+        margin-top: 60px;
         margin-bottom: 120px;
     }
 }
